--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.15.21",
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "next",
+    "@mui/material": "next",
+    "@mui/material-nextjs": "next",
     "@mui/x-date-pickers": "^7.9.0",
     "@prisma/client": "^5.16.1",
-    "@tanstack/react-query": "^4.35.0",
+    "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
@@ -26,21 +27,17 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
-    "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
     "prisma": "^5.16.1",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
