--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.11",
+    "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "notistack": "^3.0.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/http-proxy": "^1.17.15",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
